--- a/samples/AspNetCore3_1/Pages/Index.cshtml
+++ b/samples/AspNetCore3_1/Pages/Index.cshtml
@@ -4,10 +4,17 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+@* <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div> *@
+
+<div>
+    <label class="form-label">Default CAPTCHA (data-cap-api-endpoint="/api/captcha/"), Difficulty = 4</label>
     <cap-widget id="cap" data-cap-api-endpoint="/api/captcha/"></cap-widget>
+
+    <label class="form-label mt-4">Login Type CAPTCHA (data-cap-api-endpoint="/api/captcha/login/") , Difficulty = 5</label>
+    <cap-widget id="cap-login" data-cap-api-endpoint="/api/captcha/login/"></cap-widget>
 </div>
 
 <div class="container mt-5">
@@ -27,6 +34,12 @@
     document.addEventListener('DOMContentLoaded', function () {
            const widget = document.querySelector("#cap");
            widget.addEventListener("solve", function (e) {
+               const token = e.detail.token;
+               document.getElementById("tokenInput").value = token;
+           });
+
+           const loginWidget = document.querySelector("#cap-login");
+           loginWidget.addEventListener("solve", function (e) {
                const token = e.detail.token;
                document.getElementById("tokenInput").value = token;
            });
