--- a/samples/WebApplication1/Pages/Index.cshtml
+++ b/samples/WebApplication1/Pages/Index.cshtml
@@ -13,7 +13,7 @@
     <label class="form-label">Default CAPTCHA (data-cap-api-endpoint="/api/captcha/"), Difficulty = 4</label>
     <cap-widget id="cap" data-cap-api-endpoint="/api/captcha/"></cap-widget>
 
-    <label class="form-label mt-4">Login Type CAPTCHA (data-cap-api-endpoint="/api/captcha/login/") , Difficulty = 5</label>
+    <label class="form-label mt-4">Login Use Case CAPTCHA (data-cap-api-endpoint="/api/captcha/login/") , Difficulty = 5</label>
     <cap-widget id="cap-login" data-cap-api-endpoint="/api/captcha/login/"></cap-widget>
 </div>
 
